# LD1125H_Firmware

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
Apps/cw_radar/: README.md  fft_reader.py  frame.c  frame.h  gd32f30x_it.c  import  main.c  raw_reader.py  setup.c  setup.h
Apps/cw_radar/tools/: fft_reader.py
Apps/hello_world/: README.md  gd32f30x_it.c  main.c  setup.c  setup.h
Drivers/GD32F30x_usbd_library/device/Include/: usb_ch9_std.h  usbd_core.h  usbd_enum.h  usbd_pwr.h  usbd_transc.h
Drivers/GD32F30x_usbd_library/device/Source/: usbd_core.c  usbd_enum.c  usbd_pwr.c  usbd_transc.c
Drivers/GD32F30x_usbd_library/usbd/Include/: usbd_lld_core.h  usbd_lld_int.h  usbd_lld_regs.h
Drivers/GD32F30x_usbd_library/usbd/Source/: usbd_lld_core.c  usbd_lld_int.c
Examples/ADC/ADC0_ADC1_regular_parallel/: main.c
Examples/DAC/DACC_independent_trigger_LFSR_noise/: main.c  readme.txt
Examples/DAC/DACC_output_voltage/: main.c  readme.txt
Examples/DAC/DACC_simultaneous_trigger_triangle_noise/: gd32f30x_libopt.h  main.c  readme.txt
Examples/DAC/DACC_software_trigger_LFSR_noise/: main.c  readme.txt
Examples/DAC/DAC_ADC_convert/: gd32f30x_it.c  gd32f30x_it.h  main.c  readme.txt  systick.c  systick.h
Examples/DAC/DAC_DMA_convert/: main.c  readme.txt
Examples/DAC/DAC_EXTI_trigger/: main.c  readme.txt
Examples/DAC/DAC_LFSR_noise_mode/: main.c  readme.txt
Examples/DAC/DAC_triangle_noise_mode/: main.c  readme.txt
Examples/ENET/Telnet/inc/: main.h  netconf.h
Examples/ENET/Telnet/src/: gd32f30x_it.c  hello_gigadevice.c  main.c  netconf.c
Examples/SPI/SPI_master_slave_fullduplex_dma/: main.c
Examples/USBD/audio_headphone/: readme.txt
Examples/USBD/audio_headphone/inc/: gd32f303c_audio_codec.h  usbd_conf.h  usbd_hw.h
Examples/USBD/audio_headphone/src/: gd32f303c_audio_codec.c  gd32f30x_it.c  gd32f30x_usbd_hw.c  main.c
Examples/USBD/cdc_acm/: readme.txt
Examples/USBD/cdc_acm/inc/: gd32f30x_it.h  usbd_conf.h  usbd_hw.h
Examples/USBD/cdc_acm/src/: main.c  system_gd32f30x.c
Examples/USBD/composite_dev_dual_cdc/: readme.txt
Examples/USBD/composite_dev_dual_cdc/inc/: dual_cdc_acm_core.h  usbd_conf.h
Examples/USBD/composite_dev_dual_cdc/src/: dual_cdc_acm_core.c  gd32f30x_usbd_hw.c  main.c
Examples/USBD/composite_dev_hid_printer/: readme.txt
Examples/USBD/composite_dev_hid_printer/inc/: hid_printer_wrapper.h  usbd_conf.h  usbd_hw.h
Examples/USBD/composite_dev_hid_printer/src/: gd32f30x_it.c  hid_printer_wrapper.c  main.c
Examples/USBD/custom_hid/: readme.txt
Examples/USBD/custom_hid/inc/: usbd_conf.h  usbd_hw.h
Examples/USBD/custom_hid/src/: custom_hid_itf.c  gd32f30x_it.c  main.c  system_gd32f30x.c
Examples/USBD/dev_firmware_update/: readme.txt
Examples/USBD/dev_firmware_update/inc/: exmc_nandflash.h  gd25qxx.h  inter_flash_if.h  nand_flash_if.h  nor_flash_if.h  systick.h  usbd_conf.h
Examples/USBD/dev_firmware_update/src/: exmc_nandflash.c  gd25qxx.c  gd32f30x_it.c  gd32f30x_usbd_hw.c  inter_flash_if.c  main.c  nand_flash_if.c  nor_flash_if.c  system_gd32f30x.c  systick.c
Examples/USBD/in_application_program_hid/: readme.txt
Examples/USBD/in_application_program_hid/inc/: usbd_conf.h  (+1 more)
Examples/USBD/msc_cdrom/: readme.txt
Examples/USBD/msc_udisk/: readme.txt
Examples/USBD/standard_hid_keyboard/: readme.txt
Examples/USBD/usb_printer/: readme.txt
Include/: FreeRTOSConfig.h
Shared/: gd32f30x.cfg  gd3f303cet6.ld
(+131 files in other folders)
